Fix alignement for JSON display to look the way it should

--- a/clients/ft-web-client/src/components/demoComponent.css
+++ b/clients/ft-web-client/src/components/demoComponent.css
@@ -1,11 +1,4 @@
-.DemoComponent-show-json {
-    background-color: red;
-    align-content: left;
-}
-
-.DemoComponent-line {
-    background-color: blue;
-    color: white;
-    align-content: left;
-
+.DemoComponent-container {
+    background-color: yellow;
+    text-align: left;
 }
